<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Supplement Routine</string>
    <string name="widget_title">오늘 루틴</string>
    <string name="widget_next_label">다음 복용</string>
    <string name="widget_status_label">현재 상태</string>
    <string name="widget_description">오늘 영양제 복용 진행률을 확인합니다.</string>
    <string name="widget_empty">등록된 일정 없음</string>
    <string name="widget_done">오늘 루틴 완료</string>
    <string name="widget_next_format">%1$02d:%2$02d %3$s</string>
    <string name="widget_percent">%1$d%%</string>
    <string name="widget_percent_default">0%</string>
    <string name="widget_progress_count">%1$d / %2$d 완료</string>
    <string name="widget_progress_count_default">0 / 0 완료</string>
</resources>
